--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title style="text-align: center">World Happiness Report(2015-2022)</title>
+  <title>Multiple Visualisations | An Example</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
@@ -21,6 +21,14 @@
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 
+    <style>
+        body {
+            background-color: #dcdcc7;
+        }
+    .text-center {
+        text-align: center;
+    }
+    </style>
 
 </head>
 
@@ -30,18 +38,18 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-1">
-        <h1>Multiple Visualisations</h1>
-        <p>This page demonstrates how you can use pure.css grid for your layout.</p>
+      <div class="pure-u-1-1 text-center">
+        <h1>World Happiness Report(2015-2022) :)</h1>
+        <p>A visualisation analyis of the happiness of individuals around the world and the factors which affect it.</p>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-2">
-        <div class="description description-left">
-          <h2>Two Columns Layout</h2>
+      <div class="pure-u-1 text-center">
+        <div class="description description-center">
+          <h2>Happiness Map Representation</h2>
           <p> (to be continued) </p>
         </div>
       </div>
@@ -53,9 +61,9 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
-          <h2>Three Equal Columns</h2>
+      <div class="pure-u-1 text-center">
+        <div class="description description-center">
+          <h2>Top 10 Happiest Countries</h2>
           <p> (to be continued) </p>
         </div>
       </div>
@@ -74,9 +82,9 @@
       <div class="pure-u-2-3">
         <div id="vis2" class="vis-container"></div>
       </div>
-      <div class="pure-u-1-3">
-        <div class="description description-right">
-          <h2>First and Second Columns Combined</h2>
+      <div class="pure-u-1 text-center">
+        <div class="description description-center">
+          <h2>Happiness Development By Continent</h2>
           <p> (to be continued) </p>
         </div>
       </div>
@@ -86,8 +94,7 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://fit3179.github.io/Vega-Lite/" target="_blank">FIT3179
-            Teaching Team</a>. The datasource is <a href="#" target=" _blank">some data repository online</href>.</p>
+        <p>This visualisation is created by Erin Lai Ziyi. The datasource is <a href="#" target=" _blank"> (replace) </href>.</p>
       </div>
     </div>
 
