--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="pure-g">
       <div class="pure-u-1 text-center">
         <div class="description description-center">
-          <h2>Top 10 Happiest Countries</h2>
+          <h2>Happiness Factors</h2>
           <p> (to be continued) </p>
         </div>
       </div>
