--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <script type="text/javascript">
     var specVis1 = "./normalised-stacked-bars-responsive.json";
-    var specVis2 = "./line-chart-responsive.json";
+    var specVis2 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/visualization.vl.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
