--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "./normalised-stacked-bars-responsive.json";
-    var specVis2 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/visualization.vl.json";
+    var specVis1 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/choropleth_map.json";
+    var specVis2 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/interactive_scatter.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
