--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p> (to be continued) </p>
         </div>
       </div>
-      <div class="pure-u-1-2">
+      <div class="pure-u-1 text-center">
         <div id="vis1" class="vis-container"></div>
       </div>
     </div>
@@ -111,13 +111,6 @@
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
-    vegaEmbed('#vis3', specVis1, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
-    vegaEmbed('#vis4', specVis2, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
   </script>
 </body>
 
