--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <div class="pure-u-1-3">
         <div id="vis4" class="vis-container"></div>
       </div>
-      <div class="pure-u-1-3" style="width: 31.5%;">
-        <div id="vis3" class="vis-container" style="margin-left: 15px;"></div>
+      <div class="pure-u-1 text-center">
+        <div id="vis3" class="vis-container"></div>
       </div>
 
     </div>
@@ -79,7 +79,7 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-2-3">
+      <div class="pure-u-1 text-center">
         <div id="vis2" class="vis-container"></div>
       </div>
       <div class="pure-u-1 text-center">
@@ -104,6 +104,7 @@
   <script type="text/javascript">
     var specVis1 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/choropleth_map.json";
     var specVis2 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/interactive_scatter.json";
+    var specVis3 = "https://raw.githubusercontent.com/erinziyii/asgn2/main/visualisations/interactive_scatter2.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
@@ -111,6 +112,9 @@
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
+    vegaEmbed('#vis3', specVis3, { "actions": false }).then(function (result) {
+      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+    }).catch(console.error);
   </script>
 </body>
 
