--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by Erin Lai Ziyi. The datasource is <a href="#" target=" _blank"> (replace) </href>.</p>
+        <p>This visualisation is created by Erin Lai Ziyi. The datasource is <a href="#" target=" _blank"> (??) </href>.</p>
       </div>
     </div>
 
