updated index and map

--- a/index.html
+++ b/index.html
@@ -35,26 +35,27 @@
 <body>
 
   <div class="page">
-
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1 text-center">
-        <h1>World Happiness Report(2015-2022) :)</h1>
-        <p>A visualisation analyis of the happiness of individuals around the world and the factors which affect it.</p>
+        <h1 style="font-size: 40px; font-family: Arial, sans-serif;"><strong>World Happiness Report(2015-2022) :)</strong></h1>
+        <p>A visualisation analysis of the happiness of individuals around the world and the factors which affect it.</p>
       </div>
     </div>
+  </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1 text-center">
-        <div class="description description-center">
-          <h2>Happiness Map Representation</h2>
-          <p> (to be continued) </p>
+        <div class="description description-center" style="text-align: center; max-width: 800px; margin: 0 auto;">
+          <h2 style="background-color: #d7dbac; padding: 10px;">Happiness Map Representation</h2>
+          <p>The map below shows the global changes in happiness scores from the year 2015 to 2022. With further analysis of the map, we can observe that the happiest countries in the world are mostly found in Europe and Oceania, whereas the countries with the lowest happiness scores are mostly found in Asia and Africa.</p>
         </div>
       </div>
       <div class="pure-u-1 text-center">
-        <div id="vis1" class="vis-container"></div>
+        <div id="vis1" class="vis-container">
+        </div>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -62,9 +63,9 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1 text-center">
-        <div class="description description-center">
-          <h2>Happiness Factors</h2>
-          <p> (to be continued) </p>
+        <div class="description description-center" style="text-align: center; max-width: 800px; margin: 0 auto;">
+          <h2 style="background-color: #d7dbac; padding: 10px;">Happiness Factors</h2>
+          <p> The 6 factors which affect the happiness scores of each country include: health, family, economy, generosity, government trust, and freedom. Overall, we can observe from the scatter plots below that countries in Europe(green), Oceania(brown), and North America(blue) have a higher happiness score as compared to South America(orange), Asia(red), and especially Africa(purple) which is placed the lowest in happiness</p>
         </div>
       </div>
       <div class="pure-u-1-3">
@@ -93,8 +94,8 @@
     <!-- end pure grid group -->
 
     <div class="pure-g">
-      <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by Erin Lai Ziyi.</p>
+      <div class="pure-u-1-1 small-font" style="margin-left: 20px;">
+        <p>This visualisation is created by Erin Lai Ziyi. </p>
       </div>
     </div>
 
