--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="pure-u-1 text-center">
         <div class="description description-center">
-          <h2>Happiness Development By Continent</h2>
+          <h2>Top 10 Happiest Countries</h2>
           <p> (to be continued) </p>
         </div>
       </div>
